Have my own checksum commented out and using his checksum

--- a/1A:Trace/Makefile
+++ b/1A:Trace/Makefile
@@ -14,4 +14,4 @@ trace.o:trace.c trace.h
 	$(CC) $(CFLAGS) -g -c -o trace.o trace.c
 
 clean:
-	rm -f trace trace.o
+	rm -f trace trace.o checksum.o
