--- a/2A:Chat/Makefile
+++ b/2A:Chat/Makefile
@@ -8,11 +8,11 @@ LIBS =
 
 all:   cclient server
 
-cclient: myClient.c linkedlist.o networks.o pollLib.o gethostbyname6.o *.h
-	$(CC) $(CFLAGS) -o cclient linkedlist.o myClient.c networks.o pollLib.o gethostbyname6.o $(LIBS)
+cclient: myClient.c test.o parse.o linkedlist.o networks.o pollLib.o gethostbyname6.o *.h
+	$(CC) $(CFLAGS) -o cclient myClient.c test.o parse.o linkedlist.o networks.o pollLib.o gethostbyname6.o $(LIBS)
 
-server: myServer.c linkedlist.o networks.o pollLib.o gethostbyname6.o *.h
-	$(CC) $(CFLAGS) -o server linkedlist.o myServer.c networks.o pollLib.o gethostbyname6.o $(LIBS)
+server: myServer.c test.o parse.o linkedlist.o networks.o pollLib.o gethostbyname6.o *.h
+	$(CC) $(CFLAGS) -o server myServer.c test.o parse.o linkedlist.o networks.o pollLib.o gethostbyname6.o $(LIBS)
 
 .c.o:
 	gcc -c $(CFLAGS) $< -o $@ $(LIBS)
