fixing buffer code

--- a/3A:Rcopy/SmithRcopyServer/testBuff/Makefile
+++ b/3A:Rcopy/SmithRcopyServer/testBuff/Makefile
@@ -4,13 +4,13 @@
 CC = gcc
 CFLAGS= -g -Wall
 LIBS += libcpe464.2.20.a -lstdc++ -ldl
-SRC = networks.c  networks.h gethostbyname.c gethostbyname.h checksum.c checksum.h srej.c srej.h
-OBJS = networks.o gethostbyname.o checksum.o srej.o
+SRC = networks.c  networks.h gethostbyname.c gethostbyname.h checksum.c checksum.h srej.c srej.h buffer.c buffer.h
+OBJS = networks.o gethostbyname.o checksum.o srej.o buffer.o
 
 all:  buffer
 
 buffer: buffer.c $(OBJS)
-	$(CC) $(CFLAGS) -o buffer buffer.c $(OBJS) $(LIBS)
+	$(CC) $(CFLAGS) -o buffer $(OBJS) $(LIBS)
 
 .c.o: $SRC
 	gcc -c $(CFLAGS) $< -o $@ 
